# tdsp2_azure

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  base_logger.py  file_handler.py  functions.py  ga01_q01_code_s.txt  hello.py  main.py  main_tdsp2_azure.py  openai_client.py  podman_commands  pyproject.toml  query_gpt.py  requirements.txt  restart_script.sh
notes/: notes.md
tests/: README.md  test_trial.py
